Improved city selector:added buttons for switching cities

--- a/qml.qrc
+++ b/qml.qrc
@@ -72,5 +72,6 @@
         <file>iconproviders/icons/light-theme/bluetooth-view/humidity.png</file>
         <file>iconproviders/icons/light-theme/bluetooth-view/pressure.png</file>
         <file>iconproviders/icons/light-theme/bluetooth-view/temperature.png</file>
+        <file>weather/ui/SwitchSityButton.qml</file>
     </qresource>
 </RCC>
