--- a/qml.qrc
+++ b/qml.qrc
@@ -74,5 +74,6 @@
         <file>iconproviders/icons/light-theme/bluetooth-view/temperature.png</file>
         <file>weather/ui/SwitchSityButton.qml</file>
         <file>historical/ui/DatePicker.qml</file>
+        <file>historical/ui/InfoDialog.qml</file>
     </qresource>
 </RCC>
